# FinSight-AI-

./: README.md  client.py  core_class.py  main.py  pyproject.toml  requirements.txt
server/: mcp_server.json  serverdata.py
