[project]
name = "mcp-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastembed>=0.6.1",
    "langchain-openai>=0.3.14",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.6.0",
    "openai>=1.76.0",
    "yfinance>=0.2.36",
]
